# real_final_ojt_week4

./: .gitignore  .gitmodules  README.md
devel/: .catkin  local_setup.sh
devel/lib/connection/: connection_node
devel/lib/pkgconfig/: connection.pc  whCtrl_pkg.pc
devel/lib/whCtrl_pkg/: cmd_pub
devel/share/connection/cmake/: connectionConfig.cmake
devel/share/whCtrl_pkg/cmake/: whCtrl_pkgConfig.cmake
dynamixel/: CMakeLists.txt  package.xml
dynamixel/dynamixel-workbench/dynamixel_workbench_controllers/config/: steer.yaml
dynamixel/dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch
dynamixel/src/: dynamixel.cpp
src/OJT_SCBOT/: CMakeLists.txt
src/OJT_SCBOT/include/connection/: cmd_vel.h  connection.h  odom.h
src/OJT_SCBOT/launch/: scbot.launch
src/OJT_SCBOT/src/: connection.cpp
src/whCtrl_pkg/: CMakeLists.txt  package.xml
src/whCtrl_pkg/launch/: cmd_pub.launch
src/whCtrl_pkg/src/: cmd_pub.cpp
